# canopi

./: .gitattributes  .gitignore  .task-done  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  bug-report-thinking-error.md
common-types/: Cargo.toml  canopi-design-conformance.json  canopi-new-design-defaults.json  plant-filter-fields.json  species-search-normalization.json  species-search-unicode-15.json  web-species-catalog-artifact.json
common-types/src/: adaptation.rs  content.rs  design.rs  health.rs  lib.rs  location.rs  saved_object_stamps.rs  settings.rs  species.rs  support.rs
desktop/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json  updater-public.key
desktop/capabilities/: main-window.json
desktop/icons/: icon.icns
desktop/migrations/: init.sql  v2_recently_viewed.sql  v3_saved_object_stamps.sql  v4_design_notebook.sql  v5_design_notebook_sections.sql  v6_design_notebook_pinned.sql  v7_design_notebook_order.sql  v8_design_notebook_drop_pinned.sql
desktop/src/: blocking.rs  http.rs  image_cache.rs  lib.rs  logging.rs  main.rs  native_command_policy.rs  native_operation.rs  updater_config.rs
desktop/src/commands/: adaptation.rs  community.rs  content.rs  design.rs  design_notebook.rs  design_report.rs  export.rs  favorites.rs  geocoding.rs  health.rs  mod.rs  problem_report.rs  saved_object_stamps.rs  settings.rs  species.rs  tiles.rs  updater.rs
desktop/src/contracts/: adaptation.rs  mod.rs
desktop/src/db/: CLAUDE.md  design_notebook.rs  mod.rs  plant_catalog_connection.rs  plant_db.rs  plant_filter_fields.rs  query_builder.rs  recent_files.rs  schema_contract.rs  schema_contract_generated.rs  species_search_normalization.rs  test_support.rs  user_db.rs
desktop/src/design/: autosave.rs  format.rs  mod.rs  new_design_defaults.rs
desktop/src/platform/: mod.rs
desktop/src/services/: adaptation.rs  community.rs  content.rs  design_files.rs  design_notebook.rs  export.rs  geocoding.rs  health.rs  mod.rs  plant_browser.rs  problem_report.rs  saved_object_stamps.rs  settings.rs  species_catalog.rs  species_catalog_read.rs  tiles.rs
desktop/web/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  web.html
desktop/web/.husky/: pre-commit
desktop/web/prototypes/: stamp-ui-prototype.html
desktop/web/src/: app.tsx  (+10 more)
(+1032 files in other folders)
