[package]
name = "common-types"
version.workspace = true
edition.workspace = true

[features]
design-schema = ["dep:schemars"]

[dependencies]
schemars = { version = "1.2.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.23", features = ["derive"] }
