[package]
name = "canopi-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.37", features = ["bundled-full"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
common-types = { path = "../common-types" }
sha2 = "0.10"
ureq = "3"
url = "2"
sys-locale = "0.3"
tauri-plugin-mcp-bridge = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
lib-swift = { path = "../lib-swift" }

[target.'cfg(target_os = "windows")'.dependencies]
lib-cpp = { path = "../lib-cpp" }

[target.'cfg(target_os = "linux")'.dependencies]
lib-c = { path = "../lib-c" }
